[project]
name = "fastapi-progress"
version = "0.1.0"
description = "Zero-config background task progress tracker for FastAPI using WebSockets."
readme = "README.md"
authors = [
    { name = "Aldair Andrade", email = "demianmaster2003@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "redis>=8.0.1",
    "uvicorn[standard]>=0.49.0",
    "websockets>=16.0",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
